tests/baselines/reference/moduleResolutionWithSuffixes_threeLastIsBlank4.errors.txt
/tsconfig.json(3,23): error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
/index.ts(1,22): error TS2307: Cannot find module './foo' or its corresponding type declarations.


==== /tsconfig.json (1 errors) ====
    {
    	"compilerOptions": {
    		"moduleResolution": "node",
    		                    ~~~~~~
!!! error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
    		"traceResolution": true,
    		"moduleSuffixes": ["-ios", "__native", ""]
    	}
    }
    
==== /index.ts (1 errors) ====
    import { base } from "./foo";
                         ~~~~~~~
!!! error TS2307: Cannot find module './foo' or its corresponding type declarations.
    